samples/_failures_safe/1761005797_c5126f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_95124056.c: In function ‘main’:
./samples/SAFE/__tmp_95124056.c:180:9: error: expected declaration or statement at end of input
  180 |         switch (ctx.current_state) {
      |         ^~~~~~
./samples/SAFE/__tmp_95124056.c:180:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_95124056.c:180:9: error: expected declaration or statement at end of input
